2008-Aug-22  yselkowitz

	* bin/dolib: Use libtool to install libtool libraries.

	* bin/cygport.in: Only run on Cygwin 1.5.

	* bin/cygport.in (__prepinfo): Compress only *.info* files.

	* configure.in: Post-release version bump.

2008-Aug-19  yselkowitz

	* Branched 0.3.13 for cygwin-1.5.